@@ -1,3 +1,8 @@
+2017-08-23  David Malcolm  <dmalcolm@redhat.com>
+
+	* g++.dg/diagnostic/param-type-mismatch.C: New test acse.
+	* gcc.dg/param-type-mismatch.c: New test case.
+
 2017-08-23  Will Schmidt  <will_schmidt@vnet.ibm.com>
 
 	* gcc.target/powerpc/fold-vec-perm-char.c: New.
